RESOLVED FIXED100610
[WK2] Fix the incorrect use of preprocessor macro in WKPage.h
https://bugs.webkit.org/show_bug.cgi?id=100610
Summary [WK2] Fix the incorrect use of preprocessor macro in WKPage.h
Byungwoo Lee
Reported 2012-10-28 09:59:34 PDT
There is a preprocessor macro to check webkit feature 'ENABLE_INSPECTOR' in WKPage.h header file. This should be removed from the header file, and be moved to the source file.
Attachments
Patch (2.17 KB, patch)
2012-10-28 10:24 PDT, Byungwoo Lee
no flags
Byungwoo Lee
Comment 1 2012-10-28 10:24:25 PDT
WebKit Review Bot
Comment 2 2012-10-28 22:14:08 PDT
Comment on attachment 171134 [details] Patch Clearing flags on attachment: 171134 Committed r132761: <http://trac.webkit.org/changeset/132761>
WebKit Review Bot
Comment 3 2012-10-28 22:14:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.