[WK2] Fix the incorrect use of preprocessor statement in API header. https://bugs.webkit.org/show_bug.cgi?id=100610

Patch by Byungwoo Lee <bw80.lee@samsung.com> on 2012-10-28
Reviewed by Timothy Hatcher.

Remove the preprocessor statement to check 'ENABLE_INSPECTOR' feature
from the WKPage.h.

* UIProcess/API/C/WKPage.cpp:
(WKPageGetInspector):
* UIProcess/API/C/WKPage.h:

Canonical link: https://commits.webkit.org/118664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132761 268f45cc-cd09-0410-ab3c-d52691b4dbfc